<!--
  ~ Copyright (c) 2023. Project for Mobile App Development course. Rodion Gladyshev (@noidoRG).
  -->

<resources>
    <string name="app_name">Beeple</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="enter_email">Enter e-mail</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign Out</string>
    <string name="fill_field">Fill field</string>
    <string name="user_not_found">User not found</string>
    <string name="server_not_responding">The server is not responding</string>
    <string name="invalid_email">Invalid e-mail address\nOnly the following e-mails are allowed: @gmail.com, @mail.ru, @yandex.ru</string>
    <string name="short_password">Too short\nMust be from 4 to 12 symbols</string>
    <string name="not_identical_passwords">Not identical passwords</string>
</resources>