<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background"
    tools:context=".view.MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginVertical="20dp"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:srcCompat="@drawable/bdzhilka" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edEmail"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                app:boxStrokeErrorColor="#DD7300"
                app:errorTextColor="#DD7300">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_background"
                    android:ems="15"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="#FFFFFF" />

            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/edPassword"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                app:boxStrokeErrorColor="#DD7300"
                app:errorTextColor="#DD7300"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#A5A5A5"

                >

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF" />

            </com.google.android.material.textfield.TextInputLayout>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/EnterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:text="@string/log_in" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/CreateAccButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:text="@string/create_account" />
        </TableRow>


    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>