<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/default_background"
    android:layout_height="match_parent"
    tools:context=".view.CreateAccount">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginVertical="20dp"
                android:scaleX="1"
                android:scaleY="1"
                app:srcCompat="@drawable/ladybug" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edCreateEmail"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/hawkes_blue"
                android:textColorHint="@color/hawkes_blue"
                app:boxStrokeErrorColor="@color/deep_cerulean"
                app:errorTextColor="@color/deep_cerulean">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_background"
                    android:ems="15"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/hawkes_blue" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/edCreatePassword"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background"
                android:inputType="textPassword"
                android:textColor="@color/hawkes_blue"
                android:textColorHint="@color/hawkes_blue"
                app:boxStrokeErrorColor="@color/venice_blue"
                app:errorTextColor="@color/venice_blue"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/bali_hai"

                >

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textColor="@color/hawkes_blue" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/edConfirmPassword"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background"
                android:inputType="textPassword"
                android:textColor="@color/hawkes_blue"
                android:textColorHint="@color/hawkes_blue"
                app:boxStrokeErrorColor="@color/deep_cerulean"
                app:errorTextColor="@color/deep_cerulean"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/bali_hai"

                >

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF" />

            </com.google.android.material.textfield.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/CreateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"
                android:text="@string/sign_up" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>